--- a/front trabajo integrador/Stylesheet.css
+++ b/front trabajo integrador/Stylesheet.css
@@ -11,15 +11,15 @@ body {
     width: 100%;
     overflow: hidden;
     overflow-y: auto;
-
+    background-color: rgb(34, 28, 124);
     min-height: 100vh;
 }
 
-body {
+/*body {
     background-image: url('https://cdn.wallpapersafari.com/31/74/oDYvjf.jpg');
-    /*background-repeat: no-repeat;*/
+    
     background-size: cover;
-}
+}*/
 
 /* Encabezado */
 header {
@@ -40,7 +40,7 @@ footer {
     text-align: center;
     padding: 5px;
     width: 100%;
-    box-shadow: 0 -4px 20px rgba(0, 0, 0, 0.5);
+    /*box-shadow: 0 -4px 20px rgba(0, 0, 0, 0.5);*/
     bottom: 0;
     margin-top: auto;
     position: relative;
@@ -233,6 +233,31 @@ input[type="submit"]:hover {
     flex-grow: 1;
    
 }
+
+/*tablas*/
+/*hacer las tablas con el mismo estilo que el formulario y sin el efecto que traen por defecto*/
+table {
+    border-collapse: collapse;
+    width: 70%;
+    background: rgba(230, 237, 237, 0.1);
+    backdrop-filter: blur(10px);
+    margin: 10px;
+    border-radius: 20px;
+    overflow: hidden;
+
+
+}
+/*hacer que las celdas de la tabla tengan un borde*/
+th, td {
+    border: 1px solid #ffffff;
+    padding: 8px;
+    text-align: center;
+    color: #ffffff;
+}
+
+
+
+
 
 
 /*hacer responsive toda la pagina*/
